feat : "검색기능 및 In-memory Cache 적용"